# nonebot-plugin-ncupdate

./: LICENSE  README.md  dialog.py  pyproject.toml  restart_12.py
nonebot_plugin_ncupdate/: __init__.py  config.py  dialog.py  info.py  notice.py  restart.py  restart_12.py  sysexec.py  unzip.py  version.py
