[project]
name = "nonebot-plugin-ncupdate"
version = "0.1.0"
description = "A nonebot plugin for update NapCat"
authors = [
    {name = "tianyisama", email = "tianyisama99@gmail.com"},
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.1.1"
psutil = ">=5.9.0,<6.0.0"
aiofiles = ">=23.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"